syntax = "proto3";

package spine.protodata.test;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.protodata.test";
option java_outer_classname = "EchoProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message Echo {

    google.protobuf.Timestamp when = 1;

    string message = 2;

    google.protobuf.StringValue extra_message = 3;

    google.protobuf.Any arg = 4;
}
